--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 cache: npm
 branches:
   only:
-    - main # build master branch only
+    - master # build main branch only
 script:
   - hexo g
 deploy:
@@ -14,5 +14,5 @@ deploy:
   github-token: $GH_TOKEN
   keep-history: true
   on:
-    branch: main
+    branch: master
   local-dir: public
